unpackaged/main/default/objects/Opportunity/fields/Evan_field_2__c.field-meta.xml
<CustomField>
    <fullName>Evan_field_2__c</fullName>
    <label>Evan field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>