unpackaged/main/default/objects/Opportunity/fields/Evan_field__c.field-meta.xml
<CustomField>
    <fullName>Evan_field__c</fullName>
    <externalId>true</externalId>
    <label>Evan field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>