unpackaged/main/default/objects/Opportunity/fields/Kaplan_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Kaplan_Test_Field__c</fullName>
    <label>Kaplan Test Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>